...
                                            <segue destination="AjW-Xm-4P3" kind="show" destinationCreationSelector="showSwiftUICusotmerSheetSwiftUI:" id="ODf-7Z-F15"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="Ysb-4K-dUG">
                                        <rect key="frame" x="121" y="96" width="156" height="0.0"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <state key="normal" title="InstantBankPaymentsController"/>
                                        <connections>
                                            <segue destination="jqF-43-4W3" kind="show" id="I4Q-i5-Ogf"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="NEW-LINK-BTN" userLabel="LinkStandaloneComponent">
                                        <rect key="frame" x="89" y="108" width="220" height="0.0"/>
...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rm7-0L-hQi">
                                        <rect key="frame" x="0.0" y="495.5" width="374" height="50"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2L4-Af-OWD">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                <state key="normal" title="Buy">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <state key="disabled" title="Loading">
                                                    <color key="titleColor" systemColor="systemGray4Color"/>
                                                </state>
                                            </button>
...
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="750" verticalCompressionResistancePriority="250" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ak-EM-HPh">
                                                <rect key="frame" x="303" y="8" width="71" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="SelectPaymentMethodButton" label="Payment method"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                                <state key="normal" title="Add"/>
                                                <state key="disabled" title="Loading..."/>
                                            </button>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PDq-QQ-hBO">
                                                <rect key="frame" x="255" y="5" width="40" height="40"/>
...
